# shellf-driving

./: .gitignore  LICENSE  README.md  SPEC.md  demo.py  pyproject.toml  test_decckm_e2e.py  test_engine.py  test_mcp_client.py  test_mcp_drive.py  test_observe.py  test_phase1.py  test_shortcuts.py
shellf/: __init__.py  keys.py  modes.py  observe.py  render.py  server.py  shortcuts.py  terminal.py
